# e-signature-api

./: README.md
e-signature-api/: .gitignore  Cargo.toml  docker-compose.yml
e-signature-api/migrations/: 001_useraccount.sql
e-signature-api/src/: main.rs
e-signature-api/src/bot/: bot.rs
e-signature-api/src/controllers/: documents.rs  mod.rs  otp.rs  telegram.rs  users.rs
e-signature-api/src/databases/postgres_connection/: mod.rs
e-signature-api/src/services/: auth.rs  mod.rs
e-signature-api/src/services/documents/: models.rs  services.rs
e-signature-api/src/services/telegram/: models.rs
e-signature-api/src/services/users/: mod.rs  models.rs  services.rs
e-signature-api/src/services/whatsapp/: whatsapp.rs
e_signature_frontend/: .gitignore  README.md  pubspec.yaml
e_signature_frontend/lib/: main.dart
e_signature_frontend/lib/core/constants/: api_constants.dart
e_signature_frontend/lib/data/models/: document_model.dart
e_signature_frontend/lib/data/repositories/: auth.dart  auth_repository.dart  document_repository.dart
e_signature_frontend/lib/data/services/: http_web_service.dart
e_signature_frontend/lib/presentation/screens/: create_document_screen.dart  document_list_screen.dart  facial_recognition_screen.dart  home.screen.dart  login.screen.dart  otp_verification_screen.dart  settings_screen.dart  signup_screen.dart
e_signature_frontend/lib/providers/: auth_provider.dart
e_signature_frontend/lib/theme/: app_colors.dart
