[package]
name = "e-signature-api"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = {version =  "1.0", features = ["derive"]}
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dotenv = "0.15"
actix-web = "4.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std", "chrono"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rand ="0.9.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
otp = "0.2"
teloxide = { version = "0.12", features = ["macros"] }
